--- a/frontend/Agrihub/src/Component/Firstpage/Navbar/Navbar.css
+++ b/frontend/Agrihub/src/Component/Firstpage/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 /* Navbar Styles */
 .navbar {
-  background-color: #c6d1ca4b; /* Light green background */
+  background-color: #03fc73; /* Light green background */
   color: #292626;
   padding: 0.5rem 2rem;
   width: 100vw;
@@ -31,7 +31,7 @@ body {
   font-family: "Pacifico", 'cursive';
   font-size: 35px;
   font-weight: bold;
-  color: #50C878;
+  color: whitesmoke;
   margin: 0;
 }
 
